--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </header>
     <main>
         <section class="main-logo">
-            <img src="/css/assets/logo.png" alt="">
+            <img src="./css/assets/logo.png" alt="">
         </section>
         <section class="main-input">
             <div class="main-input-container">
